src/flake8_boolean_trap/snapshots/ruff__flake8_boolean_trap__tests__FBT002_FBT.py.snap
---
source: src/flake8_boolean_trap/mod.rs
expression: checks
---
- kind: BooleanDefaultValueInFunctionDefinition
  location:
    row: 12
    column: 30
  end_location:
    row: 12
    column: 34
  fix: ~
  parent: ~
- kind: BooleanDefaultValueInFunctionDefinition
  location:
    row: 13
    column: 42
  end_location:
    row: 13
    column: 46
  fix: ~
  parent: ~
- kind: BooleanDefaultValueInFunctionDefinition
  location:
    row: 14
    column: 40
  end_location:
    row: 14
    column: 44
  fix: ~
  parent: ~
- kind: BooleanDefaultValueInFunctionDefinition
  location:
    row: 15
    column: 45
  end_location:
    row: 15
    column: 49
  fix: ~
  parent: ~

