src/flake8_boolean_trap/snapshots/ruff__flake8_boolean_trap__tests__FBT003_FBT.py.snap
---
source: src/flake8_boolean_trap/mod.rs
expression: checks
---
- kind:
    BooleanPositionalValueInFunctionCall: ~
  location:
    row: 42
    column: 10
  end_location:
    row: 42
    column: 14
  fix: ~
  parent: ~
- kind:
    BooleanPositionalValueInFunctionCall: ~
  location:
    row: 57
    column: 10
  end_location:
    row: 57
    column: 14
  fix: ~
  parent: ~
- kind:
    BooleanPositionalValueInFunctionCall: ~
  location:
    row: 57
    column: 16
  end_location:
    row: 57
    column: 21
  fix: ~
  parent: ~

